src/istio/cmd/hello_a_depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-a
spec:
  selector:
    matchLabels:
      app: hello
      version: a
  replicas: 2
  template:
    metadata:
      labels:
        app: hello
        version: a
    spec:
      containers:
      - name: hello
        image: hello:v1.0.0
        command: ["/app/hello"]
        args: [":6666", "a"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 6666
        readinessProbe:
            httpGet:
              path: "/healthz"
              port: 6666
