src/istio/cmd/hello_a_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-a
  labels:
    version: a
spec:
  selector:
    app: hello
    version: b
  ports:
  - port: 80
    targetPort: 6666
