src/istio/cmd/hello_b_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-b
  labels:
    version: b
spec:
  selector:
    app: hello
    version: b
  ports:
  - port: 80
    targetPort: 6666
