src/istio/cmd/hello_dist.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello
spec:
  host: hello.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: a
    labels:
      version: a
  - name: b
    labels:
      version: b
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
