src/istio/cmd/hello_vsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 6666
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-dr
spec:
  host: hello
  subsets:
  - name: a
    labels:
      version: a
  - name: b
    labels:
      version: b
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
    - hello
  gateways:
    - mesh
  http:
    - route:
      - destination:
          host: hello
          subset: a
          port: 
            number: 80
        weight: 0 
      - destination:
          host: hello
          subset: b 
          port: 
            number: 80
        weight: 100
      fault:
        delay:
          fixedDelay: 1s
          percent: 50
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-depl-a
spec:
  selector:
    matchLabels:
      app: hello
      version: a
  replicas: 2
  template:
    metadata:
      labels:
        app: hello
        version: a
    spec:
      containers:
      - name: hello
        image: hello:v1.0.0
        command: ["/app/hello"]
        args: [":6666", "a"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 6666
        readinessProbe:
            httpGet:
              path: "/healthz"
              port: 6666
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-depl-b
spec:
  selector:
    matchLabels:
      app: hello
      version: b
  replicas: 2
  template:
    metadata:
      labels:
        app: hello
        version: b
    spec:
      containers:
      - name: hello
        image: hello:v1.0.0
        command: ["/app/hello"]
        args: [":6666", "b"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 6666
        readinessProbe:
            httpGet:
              path: "/healthz"
              port: 6666
